--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
     "react": "^18.3.1",
+    "react_portfolio": "file:",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^5.3.0",
