--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "react_portfolio",
+  "name": "Katabe KL",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -26,6 +28,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@wixc3/react-board": "^4.6.0",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.11"
